# ThesisDeployable

./: .gitignore  README.md  docker-compose.yml
Thesis_Frontend/: Dockerfile  License
Thesis_Frontend/thesis_frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
Thesis_Frontend/thesis_frontend/src/app/: layout.tsx  page.tsx
Thesis_Frontend/thesis_frontend/src/app/components/: SharedComponents.tsx  defaultContentType.tsx  displayData.tsx  errors.tsx  externalDocs.tsx  id.tsx  messageSchemas.tsx  servers.tsx  tags.tsx  webthingActions.tsx  webthingResource.tsx  webthingState.tsx
Thesis_Frontend/thesis_frontend/src/app/home/: page.tsx
Thesis_Frontend/thesis_frontend/src/app/manually/: page.tsx
Thesis_Frontend/thesis_frontend/src/tools/: asyncapiRepresentation.tsx  devConfig.tsx  interfaces.tsx  usefulFunctions.tsx
ThingDescriptionGenerator/: Dockerfile  License  README.md  UserInputSchema.json  requirements.txt
ThingDescriptionGenerator/API/: __init__.py
ThingDescriptionGenerator/API/document/: __init__.py  routes.py
ThingDescriptionGenerator/Database/: DatabaseEmulator.py
ThingDescriptionGenerator/Database/Database_Data/: DHT22_TD.json  Fujitsu-LEDLight_TD.json  Pac4200-light-TD.json  PanasonicAirConditionerP1.json  Panasonic_airConditioner_TD.json  Siemens_HVACcontrol_TD.json  Smartdoor_TD.json  test.json
ThingDescriptionGenerator/Tools/: UserInputParser.py  pyproject.toml
ThingDescriptionGenerator/Tools/Tools/: UserInputParser.py
ThingDescriptionGenerator/Tools/Tools/Tools.egg-info/: SOURCES.txt
(+7 files in other folders)
