[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Tools"
version = "0.1.0"
description = "A Python package used to parse the user input."
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["Tools"]

[tool.setuptools]
package-dir = {"" = "Tools"}
